@@ -241,11 +241,27 @@
 			"core/button": {
 				"typography": {
 					"fontFamily": "var:preset|font-family|button",
-					"fontSize": "var:preset|font-size|normal"
+					"fontSize": "var:preset|font-size|normal",
+					"fontWeight": "400",
+					"lineHeight": "1.5"
 				},
 				"border": {
 					"width": "1px",
-					"radius": "0.25rem"
+					"style": "solid",
+					"radius": "0.25rem",
+					"color": "transparent"
+				},
+				"color": {
+					"background": "var:preset|color|dark",
+					"text": "var:preset|color|white"
+				},
+				"spacing": {
+					"padding": {
+						"top": ".5rem",
+						"bottom": ".5rem",
+						"left": ".75rem",
+						"right": ".75rem"
+					}
 				}
 			},
 			"core/buttons": {
